--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -5,7 +5,7 @@
       "connection-string": "@env('DATABASE_CONNECTION_STRING')",
       "options": {
           "database": "SiteMatheus",
-          "schema": "schema.gql"
+          "schema": "../schema.gql"
       }
     },
     "runtime": {
