"Ajustes nas configurações do GraphQL"

--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -24,5 +24,15 @@
         }
       }
     },
-    "entities": {}
+    "entities": {
+        "Publicacao": {
+          "source": "Publicacoes",
+          "permissions": [
+            {
+              "actions": [ "*" ],
+              "role": "anonymous"
+            }
+          ]
+        }
+    }
   }
