--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "dab.draft.schema.json",
+    "$schema": "https://dataapibuilder.azureedge.net/schemas/latest/dab.draft.schema.json",
     "data-source": {
       "database-type": "cosmosdb_nosql",
       "connection-string": "@env('DATABASE_CONNECTION_STRING')",
@@ -16,7 +16,7 @@
       "host": {
         "mode": "production",
         "cors": {
-          "origins": ["http://localhost:4280"],
+          "origins": ["*"],
           "allow-credentials": false
         },
         "authentication": {
